--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,6 +10,10 @@ on:
         description: "AWS Region"
         required: true
         # default: "      "
+ 
+permissions:
+  id-token: write # This is required for requesting the JWT
+
 
 jobs:
   deploy:
