--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,9 +10,11 @@ on:
         description: "AWS Region"
         required: true
         # default: "      "
-# permissions:
-#   id-token: write # This is required for requesting the JWT
-jobs:
+ 
+permissions:
+  id-token: write   # This is required for requesting the JWT
+  contents: read    # This is required for actions/checkout
+jobs: 
   deploy:
     runs-on: ubuntu-latest
 
