--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,7 +13,7 @@ on:
  
 permissions:
   id-token: write   # This is required for requesting the JWT
-  # contents: read    # This is required for actions/checkout
+  contents: read    # This is required for actions/checkout
 jobs: 
   deploy:
     runs-on: ubuntu-latest
@@ -41,6 +41,6 @@ jobs:
           aws s3 ls                      # Example AWS command
           aws s3 sync . s3://sas-github-workflow --delete
       
-      # - name: verify AWS credentials
-      #   run:  aws sts get-caller-identity
+      - name: verify AWS credentials
+        run:  aws sts get-caller-identity
 
