--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -29,6 +29,25 @@ jobs:
           role-session-name: OIDC_Github_access
           aws-region: "us-east-1"
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Terraform Init
+        run: terraform init
+        working-directory: ./infra/terraform/ec2  # ✅ Updated path
+
+      - name: Terraform Validate
+        run: terraform validate
+        working-directory: ./infra/terraform/ec2
+
+      - name: Terraform Plan
+        run: terraform plan
+        working-directory: ./infra/terraform/ec2
+
+      # - name: Terraform Apply
+      #   run: terraform apply -auto-approve
+      #   working-directory: ./infra/terraform/ec2
+
       # - name: Configure AWS Credentials
       #   uses: aws-actions/configure-aws-credentials@v4
       #   with:
@@ -36,11 +55,11 @@ jobs:
       #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       #     aws-region: us-east-1  # Change to your AWS region
 
-      - name: Deploy using AWS CLI
-        run: |
-          aws s3 ls                      # Example AWS command
-          aws s3 sync . s3://sas-github-workflow --delete
+      # - name: Deploy using AWS CLI
+      #   run: |
+      #     aws s3 ls                      # Example AWS command
+      #     aws s3 sync . s3://sas-github-workflow --delete
       
-      - name: verify AWS credentials
-        run:  aws sts get-caller-identity
+      # - name: verify AWS credentials
+      #   run:  aws sts get-caller-identity
 
