--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -34,22 +34,22 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-        #working-directory: ./aws_infra  # ✅ Updated path
+        working-directory: ./aws_infra  # ✅ Updated path
 
       - name: Terraform Validate
         run: terraform validate
-        #working-directory: ./aws_infra
+        working-directory: ./aws_infra
 
       - name: Terraform Plan
         run: terraform plan
-        #working-directory: ./aws_infra
+        working-directory: ./aws_infra
 
       - name: List files for debugging
         run: ls -R
 
-      # - name: Terraform Apply
-      #   run: terraform apply -auto-approve
-      #   working-directory: ./infra/terraform/ec2
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
+        working-directory: ./aws_infra
 
       # - name: Configure AWS Credentials
       #   uses: aws-actions/configure-aws-credentials@v4
