--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -51,6 +51,11 @@ jobs:
         run: terraform apply -auto-approve
         working-directory: .
 
+      - name: Terraform Destroy
+        if: github.event.inputs.destroy == 'true'
+        run: terraform destroy -auto-approve
+        working-directory: .
+
       # - name: Configure AWS Credentials
       #   uses: aws-actions/configure-aws-credentials@v4
       #   with:
