--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -57,9 +57,10 @@ jobs:
       #   working-directory: .
 
       - name: Terraform Destroy
-        if: github.event.inputs.destroy == 'true'
+        if: github.event_name == 'workflow_dispatch' && github.event.inputs.destroy == 'true'
         run: terraform destroy -auto-approve
         working-directory: .
+
 
       # - name: Configure AWS Credentials
       #   uses: aws-actions/configure-aws-credentials@v4
