--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -2,7 +2,10 @@ name: Terraform Cleanup job
 
 on:
   workflow_dispatch:
-
+    
+permissions:
+  id-token: write   # This is required for requesting the JWT
+  contents: read    # This is required for actions/checkout
 jobs:
   terraform-cleanup:
     name: 'Post Apply Cleanup'
